--- a/port.css
+++ b/port.css
@@ -1,3 +1,4 @@
+
 .container {
     position: relative;
     width: 50%;
@@ -25,7 +26,7 @@
   :root {
       --bg-color: #fdfdfd;
       --text-color: #333;
-      --main-color: #754ef9;
+      --main-color: #1E38FF;
       --white-color: #fdfdfd;
       --shadow-color: rgba(0, 0, 0, .2);
   }
@@ -36,6 +37,7 @@
   }
   
   .dark-mode {
+      --main-color: 
       --bg-color: #0b061f;
       --text-color: #fdfdfd;
       --shadow-color: rgba(0, 0, 0, .7);
